Fixing spacing

--- a/src/app/pages/learn/learn-banner/learn-banner.component.css
+++ b/src/app/pages/learn/learn-banner/learn-banner.component.css
@@ -13,9 +13,9 @@
   align-items: flex-start;
   justify-content: center;
   width: 100vw;
-  height: 55vh; /* Updated height for better responsiveness */
+  height: 67vh; /* Updated height for better responsiveness */
   margin-top: 0vh;
-  background-image: url('/assets/Icons/ClearLearnBanner.png');
+  background-image: url('/assets/Icons/Frame 629341.png');
   background-size: cover;
   background-position: bottom;
   color: white;
@@ -24,9 +24,10 @@
 .banner-heading {
   max-width: 60%; /* Updated max-width for better responsiveness */
   font-size: 3rem; /* Default font size */
-  font-weight: bold;
+  font-weight:800;
   text-align: left;
   margin-left: 7%; /* Updated margin for better responsiveness */
+  font-family: lato;
 }
 
 .content {
@@ -34,7 +35,7 @@
   align-items: center; /* Updated to center vertically */
   justify-content: center;
   margin-top: 5%; /* Increase margin-top for more spacing */
-  width: 50%; /* Updated width for better responsiveness */
+  width: 60%; /* Updated width for better responsiveness */
 }
 
 .content-paragraph {
